htdocs/css/main.css
body.spectool-web {
  padding-top: 50px;
}

.spectool-web #spectrum-viewer,
.spectool-web form,
.spectool-web #frequency-axis {
  position: relative;
  width: 679px;
  margin-left: auto;
  margin-right: auto;
}

.spectool-web #spectrum-viewer {
  height: 700px;
  overflow-y: auto;
}

.spectool-web form {
  margin-top: 25px;
  margin-bottom: 25px;
}

.spectool-web form label[for="logfile"] {
  text-align: left;
}

.spectool-web #spectrum-viewer canvas {
  position: absolute;
  top: 0;
  right: 0;
}

.spectool-web #frequency-axis ul {
  margin-bottom: 0;
}

.spectool-web #frequency-axis ul li {
  float: left;
  width: 39px;
  -box-sizing: border-box;
  border-left: 1px solid black;
  text-align: center;
}

.spectool-web #frequency-axis ul li:first-child {
  text-align: left;
  padding-left: 6px;
}

.spectool-web #frequency-axis ul li.clear {
  width: 1px;
  clear: both;
  float: none;
}

.spectool-web #frequency-axis ul li em {
  font-weight: 700;
  font-size: 110%;
}

.spectool-web #frequency-axis ul li span {
  font-size: 80%;
}

.spectool-web #frequency-axis ul li:nth-child(16) {
  width: 79px;
  border-right: 1px solid black;
}

